--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="theOnlyAtrix">
     <meta name="keywords" content="chemicals, periodic table, periodic table of elements, chemistry, science"/>
+    <meta name="google-adsense-account" content="ca-pub-4254925270009380">
     <title>DynTable: The Periodic Table Refined</title>
   </head>
   <body>
