--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="theOnlyAtrix">
     <meta name="keywords" content="chemicals, periodic table, periodic table of elements, chemistry, science"/>
     <meta name="google-adsense-account" content="ca-pub-4254925270009380">
